--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -121,6 +121,23 @@ body {
   justify-content: space-evenly;
   overflow-y: scroll;
 }
+@media  (max-width:1024px) {
+  .search-main-editor{
+    background-color: #fcfaff;
+    padding: 8px;
+    width:100%;
+    height: 105%;
+    position: relative;
+    left:45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    overflow-y: scroll;
+  }
+  
+}
 .projects{
   max-width: fit-content;
   display: flex;
@@ -179,7 +196,7 @@ body {
   padding: 8px;
 }
 .li-project-content .items-list-project .project-buttons{
-  display: none;
+display: none;
 }
 .li-project-content:hover .items-list-project .project-buttons{
   display: flex;
@@ -290,7 +307,15 @@ body {
   margin: 8px;
 
 }
-
+@media (max-width: 1024px) {
+  .plg-check-button-editor {
+    height: 30px;
+    
+  }
+  .plag {
+    height: 80%;
+  }
+}
 .center-div{
   height: 8.3%;
   flex-wrap: wrap;
@@ -340,7 +365,38 @@ body {
   height: 64px;
   border-radius: 8px;
 }
+.mainchat {
+  display: flex;
+  background-color:#fcfaff;
+  align-items: center;
+  justify-content:center;
+  height: 5.0625rem;
+}
 
+.mainsearch_chat {
+  justify-self:center;
+  }
+
+@media only screen and (max-width:1024px) {
+  .mainchat {
+    display: flex;
+  background-color:#fcfaff;
+  align-items: center;
+  justify-content:center;
+  height: 5.0625rem;
+  position:fixed;
+  bottom:0px
+}
+.mainsearch_chat {
+height: 100%;
+}
+.read{
+  height: fit-content;
+  width:fit-content;
+  border-radius: 8px;
+  justify-self: center;
+}
+}
 /* Change background color to black */
 /* custom-quill */
 div.ql-container.ql-snow {
@@ -404,7 +460,14 @@ div.ql-container.ql-snow {
   align-items: center;
   width: max-content;
   width: calc(100% - 60px);
-
+}
+@media (max-width: 1024px) {
+  #toolbar {
+    justify-content: left;
+    height: 30%;
+    width: 100%;
+    
+  }
 }
 div#toolbar>button.cite-btn{
   display: flex;
@@ -659,6 +722,59 @@ span.ql-formats{
     margin: 0;
   }
 }
+#mobile-lr {
+ height:100%;
+ width:100%;
+}
+#mobile-lr2 {
+align-items: center;
+ }
+ #mobile-lr3{
+  align-items: center;
+   }
+@media (max-width: 1024px) {
+  #mobile-lr {
+    width:500px;
+    max-width:50%;
+    position:fixed;
+     right:50%;
+     left:50%;
+     top:12%;
+     align-items:center;
+     justify-content:center;
+  }
+  #mobile-lr2 {
+  height:80px;
+  flex-wrap: wrap;
+
+  }
+  #mobile-lr3 {
+    flex-wrap: wrap;
+  
+    }
+    #toast {
+      position: fixed;
+      justify-self: center;
+      left:50%;
+      right: 50%;
+      top:80%;
+      width: 50%;
+  height: 50px;
+    }
+}
+#toast {
+  width: 380px;
+  height: 90px;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 10px 20px rgba(75, 50, 50, 0.05);
+  border-left: 8px solid #545CEB;
+  border-radius: 7px;
+  display: grid;
+  grid-template-columns: 1.2fr 6fr 0.5fr;
+  transform: translate(0);
+  transition: 1s;
+}
 .import {
   width: 250px;
   height: fit-content;
@@ -694,16 +810,95 @@ div.lroutput::-webkit-scrollbar-thumb {
   z-index: 10;
   background-color: #fcfaff;
 }
+@media (max-width: 1024px) {
+  #modal.saveModal {
+    position: fixed;
+    top: 20%;
+    justify-self:center;
+    min-width: 100px;
+    
+  }
+  #modal5.saveModal {
+    position: fixed;
+    top: 20%;
+    justify-self:center;
+    min-width: 50px;
+    
+  }
+  #modal3.importModal {
+    position: fixed;
+    top: 20%;
+    justify-self:center;
+    min-width: 50px;
+    
+  }
+  .contextmenu {
+    justify-self: center;
+  }
+}
+@media (max-width: 1024px) {
+  #modal.importModal {
+  position: fixed;
+  top: 30%;
+  left:50%;
+  right:50%;
+  justify-self: center;
+  max-width: 70%;
+  min-width: 40%;
+  }
+  #modal.importModal .items button.items-list {
+    flex-wrap: wrap;
+  }
+  #modal {
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 10;
+    background-color: #fcfaff;
+  }
+  #modal.importModal.items {
+    max-width: 20%;
+    max-height: 20%;
+    
+  }
+}
 #modal4 {
   padding: 10px;
   border: 1px solid black;
   border-radius: 5px;
   min-width: 250px;
   width: fit-content;
+  position: fixed;
+  justify-self:center;
+  right: 10%;
+ /* left:50%;*/
+  top: 60%;
+  z-index: 10;
+  background-color: #fcfaff;
+ 
+}
+#modal5 {
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  min-width: 250px;
+  width: fit-content;
   position: absolute;
-  right: 0;
-  top: 20px;
-  left:10px;
+  right: 10%;
+  top: 40%;
+  z-index: 10;
+  background-color: #fcfaff;
+}
+#modal6 {
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  min-width: 250px;
+  width: fit-content;
+  position: absolute;
+  right: 22%;
+  top: 270%;
   z-index: 10;
   background-color: #fcfaff;
 }
@@ -724,6 +919,9 @@ div.lroutput::-webkit-scrollbar-thumb {
   margin-top: -130px;
   position: absolute;
   right: -100px;
+}
+.contextmenu{
+ background-color:white;
 }
 #modal2 {
   min-width: 300px;
@@ -748,6 +946,24 @@ div.lroutput::-webkit-scrollbar-thumb {
   top: 5px;
   z-index: 10;
   background-color: #fcfaff;
+}
+@media (max-width: 1024px) {
+  #modalshare.saveModal {
+    position: fixed;
+    top: 20%;
+    left:50%;
+    right:50%;
+    justify-self:center; 
+    width: 20%;
+    
+  }
+  #modal.importModal .items button.items-list{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap:10px;
+    height: fit-content;
+  }
 }
 #modalshare span {
   width: 100%;
@@ -790,13 +1006,11 @@ div.lroutput::-webkit-scrollbar-thumb {
   justify-content: space-between;
   }
 #modal.importModal {
-height: 15rem;
 width: max-content;
 display: flex;
 position:absolute;
 /* left:10px; */
 flex-direction: column;
-justify-content: space-between;
 }
 #modal.importModal .items button.items-list{
   display: flex;
@@ -822,10 +1036,13 @@ justify-content: space-between;
 height: 15rem;
 width: max-content;
 display: flex;
-position:absolute;
-/* left:10px; */
+position:fixed;
+right:10%;
+/*left:50%;*/
+top:40%;
 flex-direction: column;
 justify-content: space-between;
+justify-self:center;
 }
 #modal3.importModal .items {
 width: 100%;
@@ -890,6 +1107,74 @@ flex-direction: column;
   border: 1px solid black;
 }
 #modal4 .controls button {
+  margin: 5px;
+  margin: 5px;
+  width: fit-content;
+  height: fit-content;
+  background-color: #1d1d1d;
+  border: none;
+  outline: none;
+  padding: 5px;
+  border-radius: 8px;
+  font-size: 16px;
+  opacity: 0.6;
+  color: #fff;
+  transition: 0.5s;
+  /* background-color: rgb(162, 124, 245); */
+  background-color: #545CEB;
+}
+#modal5 .controls button:hover {
+  opacity: 1;
+  color: #fff;
+  /* background-color: rgb(146, 105, 233); */
+  background-color: #5c63e4;
+}
+#modal5 .controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#modal5 input {
+  width: 100%;
+  height: 2.75rem;
+  padding: 8px;
+  border: 1px solid black;
+}
+#modal5 .controls button {
+  margin: 5px;
+  margin: 5px;
+  width: fit-content;
+  height: fit-content;
+  background-color: #1d1d1d;
+  border: none;
+  outline: none;
+  padding: 5px;
+  border-radius: 8px;
+  font-size: 16px;
+  opacity: 0.6;
+  color: #fff;
+  transition: 0.5s;
+  /* background-color: rgb(162, 124, 245); */
+  background-color: #545CEB;
+}
+#modal6 .controls button:hover {
+  opacity: 1;
+  color: #fff;
+  /* background-color: rgb(146, 105, 233); */
+  background-color: #5c63e4;
+}
+#modal6 .controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#modal6 input {
+  width: 100%;
+  height: 2.75rem;
+  padding: 8px;
+  border: 1px solid black;
+}
+#modal6 .controls button {
   margin: 5px;
   margin: 5px;
   width: fit-content;
@@ -972,8 +1257,6 @@ flex-direction: column;
   max-width: max-content;
   width: fit-content;
   height: fit-content;
-  border: 2px solid #5c63e4;
-  border-radius: 5px;
   margin:5px;
 } 
 .importModal .items button:hover {
@@ -1000,11 +1283,15 @@ flex-direction: column;
 .search-buttons{
   display: flex;
   flex-direction: row;
-  gap: 10px;
-  width:250px;
+  gap: 5%;
+  width:100%;
   padding: 10px;
 }
 .view-custom-lr-btn{
+  padding: 5px;
+  cursor: pointer;
+}
+.view-custom-lr-btn1{
   padding: 5px;
   cursor: pointer;
 }
@@ -1044,6 +1331,15 @@ flex-direction: column;
   overflow-x: hidden;
   text-align: center;
 }
+@media only screen and (max-width:1024px) {
+  .fetch-container {
+    width: 80%;
+    height: 100%;
+  }
+  .view-custom-lr-btn1{
+  display: none;
+  }
+}
 .result {
   overflow-wrap: break-word;
   margin: 10px;
@@ -1055,7 +1351,6 @@ flex-direction: column;
 .result h4 {
   margin: 5px;
 }
-
 .container {
   display: flex;
   flex-direction: column;
@@ -1079,7 +1374,6 @@ flex-direction: column;
   height: 35px;
   font-size: 14px;
 }
-
 .cite-lr {
   width: 150px;
   margin-right: 16px;
@@ -1093,6 +1387,21 @@ flex-direction: column;
   box-shadow: none;
   color:rgb(23, 23, 23);
 }
+@media only screen and (max-width:1024px) {
+  .cite-lr {
+    width: 125px;
+    margin-right: 16px;
+    height: 40px;
+    padding: 5px;
+    font-size: 18px;
+    display: inline;
+    cursor: pointer;
+    outline: none;
+    border-radius: 4px;
+    box-shadow: none;
+    color:rgb(23, 23, 23);
+  }
+}
 button.search {
   width: fit-content;
   padding: 8px;
@@ -1100,6 +1409,29 @@ button.search {
   cursor: pointer;
   display: inline;
   margin: 5px;
+}
+@media only screen and (max-width:1024px) {
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+.output-lr {
+  border: 1px solid #d9d9d9;
+  border-radius: 8px;
+  width: 100%;
+  height: 300px;
+  overflow-y: auto;
+  overflow-wrap: break-word;
+  padding: 10px;
+  white-space: pre-line;
+  background-color: #fff;
+}
 }
 .output-lr {
   border: 1px solid #d9d9d9;
@@ -1153,8 +1485,9 @@ button.search {
   justify-content: flex-start;
   gap: 10px;
   width: 100%;
-  height: 90%;
+  height: 70%;
 }
+
 .output-lr2{
   max-height: 650px;
   border: 1px solid #d9d9d9;
@@ -1168,13 +1501,70 @@ button.search {
   padding: 5px;
   width: 94%;
   padding-inline-start: 16px;
-  height: 64px;
+  height: 44px;
   font-size: 20px;
   margin-left:16px;
   outline-color: rgba(0, 0, 255, 0.1);
   margin-bottom: 12px;
   margin-right:16px;
   border-radius: 4px;
+}
+.mainlabel {
+  margin-top:20px;
+}
+
+@media (max-width:1024px) {
+  .custom-lr {
+    width: 100%;
+  }
+  .custom-lr-data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    left:50%;
+    right:50%;
+    top:10%;
+    justify-self: center;
+    gap: 10px;
+    width: 70%;
+  }
+  .custom-lr-data input {
+    padding: 5px;
+    width: 94%;
+    padding-inline-start: 16px;
+    height: 40px;
+    font-size: 20px;
+    margin-left:16px;
+    outline-color: rgba(0, 0, 255, 0.1);
+    margin-bottom: 12px;
+    margin-right:16px;
+    border-radius: 4px;
+  }
+  .mainlabel {
+    justify-content:center;
+    justify-self:center;
+    position:fixed;
+    left:50%;
+    right:50%;
+  }
+  .custom-lr-data1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   /* position: relative;
+    left: 15%;
+    right: 15%;*/
+    gap: 10px;
+    width: 60%;
+    height: 100%;
+  }
+  .output-lr2 {
+    height: 500px;
+    width: 100%;
+    overflow-y: scroll;
+  }
 }
 .exit-lr-btn {
   background-color: transparent;
@@ -1353,6 +1743,7 @@ header div p {
   font-weight: 600;
   font-size: 14px;
 }
+
 .notification div{
   display: flex;
   justify-content: center;
@@ -1374,6 +1765,22 @@ header div p {
 }
 .notification button:hover {
   background-color: rgb(0, 90, 0);
+}
+@media only screen and (max-width:1024px) {
+  .notification {
+    justify-self: center;
+    max-width: 50%;
+  }
+  .search-button {
+    width: 60px;
+  height: 25px;
+  border-radius: 6px;
+  border:1px solid #d9d9d9;
+  outline: none;
+  font-size: 12px;
+  cursor: pointer;
+  padding: 5px;
+  }
 }
 /* ________________Authentication Css "styles.css"______________ */
 .layout {
@@ -1926,6 +2333,22 @@ div div.contaxt-menu-rephrase button.rephrase-btn:hover{
   }
   .ol{
     max-height: 500px
+  }
+  
+}
+.mobile_sheet_description {
+  width:70%;
+  justify-items: center;
+}
+@media only screen and (max-width:1024px) {
+  .mobile_sheet_description {
+  width:70%;
+  justify-items: center;
+}
+  .mobile_sheet_description1 {
+    width:70%;
+    position:relative;
+    left:30%;
   }
   
 }
