--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -121,12 +121,12 @@ body {
   justify-content: space-evenly;
   overflow-y: scroll;
 }
-@media  (max-width:1024px) {
+@media  (max-width:1080px) {
   .search-main-editor{
     background-color: #fcfaff;
     padding: 8px;
     width:100%;
-    height: 50%;
+    height: 40%;
     position: relative;
     left:45%;
     display: flex;
@@ -137,6 +137,16 @@ body {
     overflow-y: scroll;
   }
   
+}
+@media only screen and (max-height:800px) {
+  .search-main-editor{
+    height: 70%;
+  }
+}
+@media only screen and (min-height:2000px) {
+  .search-main-editor{
+    height: 30%;
+  }
 }
 .projects{
   max-width: fit-content;
@@ -307,7 +317,7 @@ display: none;
   margin: 8px;
 
 }
-@media (max-width: 1024px) {
+@media (max-width: 1080px) {
   .plg-check-button-editor {
     height: 30px;
     
@@ -377,7 +387,7 @@ display: none;
   justify-self:center;
   }
 
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:1080px) {
   .mainchat {
     display: flex;
   background-color:#fcfaff;
@@ -385,7 +395,7 @@ display: none;
   justify-content:center;
   height: 5.0625rem;
   position:fixed;
-  bottom:0px
+  bottom:50%;
 }
 .mainsearch_chat {
 height: 100%;
@@ -395,6 +405,12 @@ height: 100%;
   width:fit-content;
   border-radius: 8px;
   justify-self: center;
+}
+}
+@media only screen and (max-width:1080px) and (min-height:1000px) {
+  .mainchat {
+  position:fixed;
+  bottom:80%;
 }
 }
 /* Change background color to black */
@@ -461,10 +477,10 @@ div.ql-container.ql-snow {
   width: max-content;
   width: calc(100% - 60px);
 }
-@media (max-width: 1024px) {
+@media (max-width: 1080px) {
   #toolbar {
     justify-content: left;
-    height: 30%;
+    height: 5%;
     width: 100%;
     
   }
@@ -732,7 +748,7 @@ align-items: center;
  #mobile-lr3{
   align-items: center;
    }
-@media (max-width: 1024px) {
+@media (max-width: 1080px) {
   #mobile-lr {
     width:500px;
     max-width:50%;
@@ -810,7 +826,7 @@ div.lroutput::-webkit-scrollbar-thumb {
   z-index: 10;
   background-color: #fcfaff;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1080px) {
   #modal.saveModal {
     position: fixed;
     top: 20%;
@@ -836,7 +852,7 @@ div.lroutput::-webkit-scrollbar-thumb {
     justify-self: center;
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1080px) {
   #modal.importModal {
   position: fixed;
   top: 30%;
@@ -947,7 +963,7 @@ div.lroutput::-webkit-scrollbar-thumb {
   z-index: 10;
   background-color: #fcfaff;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1080px) {
   #modalshare.saveModal {
     position: fixed;
     top: 20%;
@@ -1331,7 +1347,7 @@ flex-direction: column;
   overflow-x: hidden;
   text-align: center;
 }
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:1080px) {
   .fetch-container {
     width: 80%;
     height: 100%;
@@ -1387,7 +1403,7 @@ flex-direction: column;
   box-shadow: none;
   color:rgb(23, 23, 23);
 }
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:1080px) {
   .cite-lr {
     width: 125px;
     margin-right: 16px;
@@ -1421,7 +1437,7 @@ button.search {
   white-space: pre-line;
   background-color: #fff;
 }
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:1080px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -1513,7 +1529,7 @@ button.search {
   margin-top:20px;
 }
 
-@media (max-width:1024px) {
+@media (max-width:1080px) {
   .custom-lr {
     width: 100%;
   }
@@ -1766,7 +1782,7 @@ header div p {
 .notification button:hover {
   background-color: rgb(0, 90, 0);
 }
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:1080px) {
   .notification {
     justify-self: center;
     max-width: 50%;
@@ -2340,13 +2356,14 @@ div div.contaxt-menu-rephrase button.rephrase-btn:hover{
   width:70%;
   justify-items: center;
 }
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:1080px) {
   .mobile_sheet_description {
   width:70%;
   justify-items: center;
 }
   .mobile_sheet_description1 {
     width:70%;
+    height: 100%;
     position:relative;
     left:30%;
   }
