--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -126,7 +126,7 @@ body {
     background-color: #fcfaff;
     padding: 8px;
     width:100%;
-    height: 70%;
+    height: 40%;
     position: relative;
     left:45%;
     display: flex;
@@ -1458,6 +1458,18 @@ button.search {
     padding: 10px;
     white-space: pre-line;
     background-color: #fff;
+  }
+  }
+@media only screen and (max-width:1080px) and (max-height:1000px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height:60%;
+    padding: 10px;
   }
   }
 [contenteditable] {
