--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -133,19 +133,19 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    justify-content: space-evenly;
+    /*justify-content: space-evenly;*/
     overflow-y: scroll;
   }
   
 }
-@media only screen and (max-height:800px) {
+@media only screen and (max-height:1080px) {
   .search-main-editor{
-    height: 70%;
+    height: 60%;
   }
 }
 @media only screen and (min-height:2000px) {
   .search-main-editor{
-    height: 30%;
+    height: 20%;
   }
 }
 .projects{
@@ -1445,14 +1445,14 @@ button.search {
     align-items: center;
     gap: 10px;
     width: 100%;
-    height:40%;
+    height:50%;
     padding: 10px;
   }
   .output-lr {
     border: 1px solid #d9d9d9;
     border-radius: 8px;
     width: 100%;
-    height: 100px;
+    height: 120px;
     overflow-y: auto;
     overflow-wrap: break-word;
     padding: 10px;
@@ -1460,7 +1460,7 @@ button.search {
     background-color: #fff;
   }
   }
-@media only screen and (max-width:1080px) and (max-height:1000px) {
+@media only screen and (max-width:1080px) and (max-height:1080px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -1468,8 +1468,19 @@ button.search {
     align-items: center;
     gap: 10px;
     width: 100%;
-    height:60%;
+    height:50%;
     padding: 10px;
+  }
+  .output-lr {
+    border: 1px solid #d9d9d9;
+    border-radius: 8px;
+    width: 100%;
+    height: 80px;
+    overflow-y: auto;
+    overflow-wrap: break-word;
+    padding: 10px;
+    white-space: pre-line;
+    background-color: #fff;
   }
   }
 [contenteditable] {
@@ -2376,7 +2387,6 @@ div div.contaxt-menu-rephrase button.rephrase-btn:hover{
 }
   .mobile_sheet_description1 {
     width:70%;
-    height: 100%;
     position:relative;
     left:30%;
   }
