--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -126,7 +126,7 @@ body {
     background-color: #fcfaff;
     padding: 8px;
     width:100%;
-    height: 45%;
+    height: 50%;
     position: relative;
     left:45%;
     display: flex;
@@ -138,12 +138,12 @@ body {
   }
   
 }
-@media only screen and (max-height:1080px) {
+@media only screen and (max-width:1080px) and (max-height:1080px) {
   .search-main-editor{
     height: 65%;
   }
 }
-@media only screen and (min-height:2000px) {
+@media only screen and (max-width:1080px) and (min-height:2000px) {
   .search-main-editor{
     height: 25%;
   }
