--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -126,7 +126,7 @@ body {
     background-color: #fcfaff;
     padding: 8px;
     width:100%;
-    height: 50%;
+    height: 55%;
     position: relative;
     left:45%;
     display: flex;
@@ -410,6 +410,12 @@ height: 100%;
 @media only screen and (max-width:1080px) and (min-height:1000px) {
   .mainchat {
   position:fixed;
+  bottom:70%;
+}
+}
+@media only screen and (max-width:1080px) and (min-height:1800px) {
+  .mainchat {
+  position:fixed;
   bottom:80%;
 }
 }
@@ -426,7 +432,34 @@ div.ql-container.ql-snow {
   flex-wrap: wrap;
   flex-direction: row;
   align-content: center;
+  justify-content: center;
 }
+/*
+.button {
+  position: relative;
+  top:5%;
+  width: fit-content;
+  height:100%;
+  background: #545CEB;
+  border-radius: 5px;
+}
+.button .content {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFF;
+}
+.content span,
+.content .button-text {
+  margin-left: 5px;
+}
+.content .button-text {
+  margin-right: 5px;
+  margin-left: 5px;
+  font-size: 0.875rem;
+}*/
 .quill{
   height: 100%;
 }
