--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1919,14 +1919,15 @@ header div p {
   margin-top: 8px;
 }
 .error-message {
-  color: rgb(250, 0, 0);
+  /*color: rgb(250, 0, 0);*/
+  color:#e06f5d;
   font-size: 12px;
   font-family: serif;
   width: 100%;
   height: 14px;
   font-weight: 600;
   text-align: left;
-  margin-left: 32px;
+  margin-left: 0.125rem;
   margin-bottom: 8px;
 }
 /* ________________Components Css "components.css"______________ */
@@ -2424,4 +2425,96 @@ div div.contaxt-menu-rephrase button.rephrase-btn:hover{
     left:30%;
   }
   
+}
+.google_login {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    height: 3rem;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    text-decoration: none;
+    border-radius: 4px;
+    border: 1px solid #cee6ff;
+    font-size: 14px;
+    text-align: left;
+    color: #0089ff;
+   /* color:#323dd6;*/
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.google_login:hover {
+background-color: #cee6ff;
+}
+
+.or_login{
+    display: flex;
+    font-size: 0.75rem;
+    font-weight: 600;
+    letter-spacing: 0.8px;
+    color: #c3cddd;
+    margin: 1.25rem 0;
+    width: 100%;
+
+}
+.or_login::before {
+    margin: auto 0.75rem auto 0px;
+}
+.or_login::after {
+    margin: auto 0 auto 0.75rem;
+}
+.or_login::before, .or_login::after {
+    content: "";
+    flex: 1 1 0%;
+    border-bottom: 1px solid #d8deeb;
+}
+.email_login_field{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  justify-content: flex-start;
+  margin-bottom: 1.5rem;
+  gap:0.5rem;
+  margin: 0.0625rem;
+}
+
+.email_login_label {
+    color: #283b52;
+    font-size: 0.875rem;
+    font-weight: 600;
+}
+
+.email_login_input_field {
+    width: calc(100% - 0.0625*2)rem;
+    box-sizing: border-box;
+    padding: 0.75rem 0.75rem;
+    border: 0.0625rem solid #cee6ff;
+    margin: 0.0625rem;
+    background-color: #fff;
+    border-radius: 0.25rem;
+    color: #283b52;
+    font-family: sans-serif;
+    font-size: 0.875rem;
+    line-height: 1rem;
+    outline: none;
+    transition: border-color 160ms ease-out;
+}
+.email_login_input_field_invalid {
+    width: calc(100% - 0.0625*2)rem;
+    box-sizing: border-box;
+    padding: 0.75rem 0.75rem;
+    border: 0.0625rem solid #ffd8d2;
+    margin: 0.0625rem;
+    background-color: #fff;
+    border-radius: 0.25rem;
+    color: #283b52;
+    font-family: sans-serif;
+    font-size: 0.875rem;
+    line-height: 1rem;
+    outline: none;
+    transition: border-color 160ms ease-out;
 }
