--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -63,6 +63,7 @@
   }  
   body {
     @apply bg-background text-foreground;
+   
   }
 }
 * {
@@ -82,7 +83,8 @@ main::-webkit-scrollbar-thumb {
 main {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: visible;
+  margin-top:0; /* or only add if header exists */
 }
 
 :root {
@@ -96,6 +98,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 /* ________Editor Css_______ */
