--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -83,7 +83,7 @@ main::-webkit-scrollbar-thumb {
 main {
   width: 100%;
   height: 100%;
-  overflow: visible;
+  overflow: auto;
   margin-top:0; /* or only add if header exists */
 }
 
@@ -2522,3 +2522,5 @@ background-color: #cee6ff;
     outline: none;
     transition: border-color 160ms ease-out;
 }
+
+
